# photoelasticity3Dsimulator

./: Algebra.h  CMakeLists.txt  Cells.h  Config.json5  Config_lmp.json5  Fem.cpp  Fem.h  Geometry.cpp  Geometry.h  Grains.h  Image.cpp  Image.h  Main.cpp  Notes.txt  Parameters.h  README.md  Ray.h  TODO.lst  sphere.py
DolphinX_build/: Script.sh
Fenicsx/: CMakeLists.txt  sphere.ufl
Fenicsx/testLinEl/: SphereMeshGenerator.py  main.cpp  sphere.py
dem/: Container.scad  Container.stl  in.pack  pack_final_forces.dmp  pack_final_grains.dmp  pack_final_wall.dmp
meshes/: sphere_mesh.h5  sphere_mesh.xdmf  sphere_mesh_coarse.h5  sphere_mesh_coarse.xdmf  sphere_mesh_fine.h5  sphere_mesh_fine.xdmf
src/: Algebra.h  CMakeLists.txt  Cells.cpp  Cells.h  Fem.cpp  Fem.h  Geometry.cpp  Geometry.h  Grains.h  Image.cpp  Image.h  Main.cpp  Parameters.h  Ray.h  fem_impl_1.cpp  fem_impl_2.cpp  fem_impl_3.cpp  fem_template_generator.sh  sphere.py
